<resources>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_first_item">Camera</string>
    <string name="nav_first_item_body">Diagnose using your camera</string>

    <string name="nav_second_item">Gallery</string>
    <string name="nav_second_item_body">Diagnose image from Gallery</string>

    <string name="nav_third_item">History</string>
    <string name="nav_third_item_body">View diagnosed images</string>

    <string name="nav_fourth_item">Useful Links</string>
    <string name="nav_fourth_item_body">You can learn from here</string>

    <string name="nav_fifth_item">Tell a friend about us!</string>
    <string name="nav_fifth_item_body">You can share our Application with your friend</string>

    <string name="nav_sixth_item">Report a bug</string>
    <string name="nav_sixth_item_body">Press here to capture the mole</string>

    <string name="hamburger">hamburger</string>
    <string name="about_contact">Connect with us</string>
    <string name="about_email">"moleagnose@gmail.com</string>
    <string name="about_github">Oterem/moleAgnose</string>
    <string name="about_facebook">Moleagnose</string>
    <string name="about_playStore"></string>
    <string name="about_description">Moleagnose - application for diagnosing suspicious moles</string>
    <string name="about_website">https://github.com/Oterem/moleAgnoseFinal</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="app_name">MoleAgnose</string>
    <string name="create_file_error">Error occurred while creating the File</string>
    <string name="tellAboutUs_message">I want to recommend you on MoleAgnose\n\n
            https://play.google.com/store/apps/details?id=com.moleagnose.oterem.moleagnose\n\n
            Download it and Help to save lives :)</string>
    <!-- start PopUp -->
    <string name="pop_up_close_window">Got it!</string>
    <string name="share">Share</string>
    <string name="pop_up_title">Your Diagnose</string>
    <string name="pop_up_body_good">Risk level: LOW\n\nWe recommend on a routine check every 3 months</string>
    <string name="pop_up_body_medium">Risk level: MEDIUM\n\nWe recommend on seeing a doctor soon</string>
    <string name="pop_up_body_bad">Risk level: HIGH\n\nWe recommend on seeing a doctor ASAP</string>
    <!-- end PopUp -->
    <!-- Start of showcase -->
    <string name="show_case_close_window">Got it!</string>
    <string name="show_case_close_disclaimer">I agree</string>
    <string name="show_case_title_disclaimer">Disclaimer</string>
    <string name="show_case_disclaimer">The information on this App is not a substitute for professional medical advice, diagnosis or treatment. All content, including text, graphics, images and information, contained on or available through this App is for general information purposes only
    \n\nYou are strongly encouraged to confirm any information obtained from or through this App with your physician or another professional healthcare provider and to review all information regarding any medical condition or treatment with your physician or other a professional healthcare provider. </string>
    <string name="show_case_camera_text">Take a picture of your mole. Then you can crop your picture. Try to focus on the mole</string>
    <string name="show_case_gallery_text">You can browse images from your gallery and analyze them</string>
    <string name="show_case_history_text">Browse images that has been analyzed</string>
    <string name="show_case_links_text">Stay updated</string>
    <!-- Start of showcase -->
    <!-- Start of help activity -->
    <string name="backup_help_url">https://moleagnose1.firebaseapp.com</string>
    <!-- End of help activity -->
    <string name="no_internet_connection_message">No internet connection</string>
    <string name="progressDialog_uploading_image">Uploading image...</string>
    <string name="progressDialog_downloading_image">Download diagnose...</string>

    <!-- Json request using Volley -->
    <string name="links_json_url">https://s3.amazonaws.com/moleagnose-deployment/links.json</string>
    <string name="json_array_name">links</string>
    <!-- End of Json request using Volley -->
    <!-- start AWS strings -->
    <string name="aws_error_download">Error while downloading diagnose</string>
    <!-- end AWS strings -->
    <!-- start Text to print on Image result -->
    <string name="text_on_image_result_val_minus_one">High Risk</string>
    <string name="text_on_image_result_val_zero">Medium Risk</string>
    <string name="text_on_image_result_val_one">Low Risk</string>
    <string name="text_on_image_result_date_pattern">dd/MM/yyyy, HH:mm</string>
    <string name="no_image_in_history_to_show">There are no images in history</string>
    <!-- end Text to print on Image result -->
    <!-- Start listview -->
    <string name="list_view_title">Useful Links</string>
    <string name="internet_error_loading_links">This feature requires internet connection</string>
    <!-- End listview -->

    <string name="history_activity_title">Moles you have captured</string>


</resources>
