<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_first_item" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_second_item" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/history"
            android:title="@string/nav_third_item" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/info"
            android:title="@string/nav_fourth_item" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_fifth_item" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/bug"
                android:title="@string/nav_sixth_item" />
        </menu>
    </item>

</menu>
